Fix broken layout and colour proximity clear button in styleguide

--- a/app/assets/stylesheets/styleguide.sass
+++ b/app/assets/stylesheets/styleguide.sass
@@ -81,6 +81,9 @@ pre.styleguide.is-open
 .styleguide-intro
   padding: 25px
 
+.styleguide-block
+  overflow: hidden
+
 .styleguide-block__item--left
   float: left
   margin-right: 20px
@@ -155,7 +158,7 @@ pre.styleguide.is-open
   .styleguide-proximity
     float: left
     margin-right: 10px
-  
+
 
 .field
   background: #fff
@@ -163,6 +166,7 @@ pre.styleguide.is-open
   width: 250px
 
 .styleguide-proximity__input
+  float: left
   width: 200px
 
 .styleguide__input-copy
